--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,11 @@
 }
 
 .app__header {
-  background-color: #EB836D;
+  background-color: #000;
   min-height: 12vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -32,17 +32,26 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .appmain {
-  background: #383490;
+  background: #fff;
   flex: 1;
   padding: 2vh 33vw;
+}
+
+.customButton{
+ background: #000;
+ padding: 5px 15px;
+ color: #fff;
+ border-radius: 8px;
+ border: none;
+ margin-top: 10px;
 }
